# nexus-terminal-rust

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE_ANALYSIS.md  LICENSE_COMPLIANCE_SUMMARY.md  NOTICE  README.md
.github/workflows/: release-single-exe.yml
apps/desktop/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/frontend/src/: App.vue  env.d.ts  main.ts
apps/desktop/frontend/src/assets/: global.css  terminal-theme-presets.json
apps/desktop/frontend/src/components/: AboutSection.vue  AddConnectionForm.vue  AddConnectionFormAdvanced.vue  AddConnectionFormAuth.vue  AddConnectionFormBasicInfo.vue  AddEditFavoritePathForm.vue  AddEditQuickCommandForm.vue  AddProxyForm.vue  AlertDialog.vue  AppSelect.vue  BatchEditConnectionForm.vue  CommandAutocomplete.vue  CommandHistory.vue  CommandHistoryMenu.vue  CommandHistoryPanel.vue  CommandInputBar.vue  ConfirmDialog.vue  ConnectionDialog.vue  ConnectionList.vue  DataManagementSection.vue  DockerManager.vue  FavoritePaths.vue  FileEditorContainer.vue  FileEditorOverlay.vue  FileEditorTabs.vue  FileManagerActionModal.vue  FileManagerContextMenu.vue  FileUploadPopup.vue  FocusSwitcherConfigurator.vue  GlobalAlertDialog.vue  GlobalConfirmDialog.vue  GlobalPromptDialog.vue  LayoutConfigurator.vue  LayoutNodeEditor.vue  LayoutPreviewNode.vue  LayoutRenderer.vue  LocalTerminalSessionView.vue  ManageTagConnectionsModal.vue  MonacoEditor.vue  NavSidebar.vue  (+31 more)
apps/desktop/frontend/src/composables/: useAddConnectionForm.ts  useAlertDialog.ts  useConfirmDialog.ts  useDockerManager.ts  useFileEditor.ts  usePromptDialog.ts  useSessionLifecycle.ts  useSftpActions.ts  useSftpBrowser.ts  useSftpBrowserDragAndDrop.ts  useSftpFileListColumns.ts  useSshTerminal.ts  useStatusMonitor.ts  useTauriEvents.ts  useTransferProgress.ts
apps/desktop/frontend/src/lib/: api-ai.ts  api-auth.ts  api-auxiliary.ts  api-connections.ts  api-crypto.ts  api-database.ts  api-desktop.ts  api-local-terminal.ts  api-settings.ts  api-sftp.ts  api-ssh-suspend.ts  api-ssh.ts  api-status.ts  api-telnet.ts  api-transfer.ts  api.ts  errors.ts  invoke.ts  local-upload.ts
apps/desktop/frontend/src/stores/: ai.ts  appearance.ts  audit.ts  auth.ts  commandHistory.ts  connections.ts  dialog.ts  favoritePaths.ts  fileEditor.ts  focusSwitcher.ts  layout.ts  notifications.ts  pathHistory.ts  proxies.ts  quickCommandTags.ts  quickCommands.ts  session.ts  settings.ts  sshKeys.ts  tags.ts  uiNotifications.ts
apps/desktop/frontend/src/types/: ai.ts
apps/desktop/frontend/src/utils/: inline-suggest.ts  registry.ts  types.ts
apps/desktop/frontend/src/views/: AuditLog.vue  CommandHistory.vue  Connections.vue  Dashboard.vue  Databases.vue  Login.vue  Notifications.vue  Proxies.vue  QuickCommands.vue  Settings.vue  Setup.vue  Statistics.vue  Tags.vue  Tools.vue  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs  status_monitor.rs  telnet.rs
apps/desktop/src-tauri/src/commands/: ai.rs  auth.rs  auxiliary.rs  connections.rs  crypto.rs  database.rs  db_clickhouse.rs  db_mssql.rs  db_mysql.rs  db_oracle.rs  db_postgres.rs  db_redis.rs  db_types.rs  desktop.rs  local_terminal.rs  mod.rs  settings.rs  sftp.rs  ssh.rs  ssh_suspend.rs  status.rs  telnet.rs  transfer.rs
apps/desktop/src-tauri/src/local_terminal/: mod.rs  runner.rs
apps/desktop/src-tauri/src/status_monitor/: metrics.rs  mod.rs  parser.rs  policy.rs  service.rs  types.rs
apps/desktop/src-tauri/src/status_monitor/collector/: linux.rs  macos.rs  mod.rs  windows.rs
crates/api-contract/: Cargo.toml
crates/api-contract/src/: dto.rs  error.rs  lib.rs
crates/audit-core/: Cargo.toml
crates/audit-core/src/: lib.rs  model.rs  repository.rs  service.rs
crates/auth-core/: Cargo.toml
crates/auth-core/src/: lib.rs  password.rs  repository.rs  service.rs  totp.rs
crates/connection-core/: Cargo.toml
crates/connection-core/src/: lib.rs  model.rs  repository.rs
crates/history-core/: Cargo.toml
crates/history-core/src/: lib.rs  model.rs  repository.rs
crates/notifications-core/: Cargo.toml
crates/notifications-core/src/: lib.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: lib.rs
crates/proxy-core/tests/: socks5_test.rs
crates/proxy-core/tests/common/: mod.rs
crates/quick-command-core/: Cargo.toml
crates/quick-command-core/src/: lib.rs  model.rs  repository.rs
crates/session-core/: Cargo.toml
crates/session-core/src/: lib.rs
crates/settings-core/: Cargo.toml
crates/settings-core/src/: lib.rs  model.rs  repository.rs
crates/sftp-core/: Cargo.toml
crates/sftp-core/src/: lib.rs  service.rs
crates/shared-utils/: Cargo.toml
crates/shared-utils/src/: crypto.rs  id.rs  lib.rs  path.rs
crates/ssh-core/: Cargo.toml
crates/ssh-core/src/: host_key.rs  lib.rs  manager.rs  session.rs
crates/ssh-suspend-core/: Cargo.toml
crates/ssh-suspend-core/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs  migrations.rs  pool.rs  repo_auth.rs  repo_auxiliary.rs  repo_connection.rs  repo_host_key.rs  repo_settings.rs
crates/storage-sqlite/src/sql/: 001_create_users.sql  002_create_connections.sql  003_create_settings.sql  004_add_passkeys.sql  005_add_desktop_options.sql  006_add_server_management_fields.sql  007_fix_passkeys.sql  008_create_ssh_known_hosts.sql
crates/storage-sqlite/tests/: command_history_merge_test.rs  passkeys_migration_test.rs
crates/storage-sqlite/tests/common/: mod.rs
crates/tag-core/: Cargo.toml
crates/tag-core/src/: lib.rs
crates/transfer-core/: Cargo.toml
crates/transfer-core/src/: lib.rs
crates/ws-gateway/: Cargo.toml
crates/ws-gateway/src/: lib.rs
docs/: DELIVERY_CHECKLIST.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  README.md  REBUILD_PLAN_TAURI2_RUST.md  STATUS_MONITOR_ENHANCEMENT_PLAN.md  UI_FEATURE_INVENTORY.md  UI_FEATURE_VERIFICATION.md  UI_REMEDIATION_PLAN.md
(+187 files in other folders)
