[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/api-contract",
  "crates/auth-core",
  "crates/connection-core",
  "crates/session-core",
  "crates/ssh-core",
  "crates/sftp-core",
  "crates/ssh-suspend-core",
  "crates/proxy-core",
  "crates/tag-core",
  "crates/quick-command-core",
  "crates/notifications-core",
  "crates/audit-core",
  "crates/settings-core",
  "crates/history-core",
  "crates/transfer-core",
  "crates/ws-gateway",
  "crates/storage-sqlite",
  "crates/shared-utils",
]

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros", "time", "uuid"] }
russh = "0.49"
russh-sftp = "2.1"
argon2 = { version = "0.5", features = ["password-hash"] }
bcrypt = "0.16"
aes-gcm = "0.10"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
bytes = "1"
base64 = "0.22"
dashmap = "6"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
