[package]
name = "auth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
totp-rs = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
session-core = { path = "../session-core" }
api-contract = { path = "../api-contract" }
shared-utils = { path = "../shared-utils" }
ciborium = "0.2"
sha2 = "0.10"
rand = "0.9"
base64 = { workspace = true }
