[package]
name = "quick-command-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tag-core = { path = "../tag-core" }
api-contract = { path = "../api-contract" }
shared-utils = { path = "../shared-utils" }
