[package]
name = "sftp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
russh-sftp = { workspace = true }
ssh-core = { path = "../ssh-core" }
shared-utils = { path = "../shared-utils" }
