[package]
name = "transfer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
sftp-core = { path = "../sftp-core" }
shared-utils = { path = "../shared-utils" }
