[package]
name = "ws-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
api-contract = { path = "../api-contract" }
session-core = { path = "../session-core" }
shared-utils = { path = "../shared-utils" }
